--- a/src/index.css
+++ b/src/index.css
@@ -6,6 +6,11 @@ body {
   width: 100vw;
   height: 100vh;
 }
+
 #root {
   height: 100%;
+}
+.leaflet-container {
+  width: 100%;
+  height: 100vh;
 }
